	- Fix incorrect Kill Steal attribution from 1v1 fights.
	- Abort competition if a team leader still isn't ready to engage (airborne for pilot AI) by the time the start-competition-now timer runs out.
- Spawning:
	- Wait until after vessels are unpacked before reverting the spawn camera - fixes an exception with EVA kerbals and KSPCF.
	- Fix freezing when vessel removal throws an exception.
- GameModes:
	- Space Combat Tools:
		- Better implement SpaceFriction initialization at round start.
		- Fix AI sometimes limiting to idle speed instead of max speed in space.
		- Add limits to prevent G/AoA limiter returning infinity values in space.
	- Battle Damage:
		- Add selfsealing options to Monoprop tanks.
		- Tanks using B9PartSwitcher for fuel switching now get selfsealing options.
- AI:
	- Fix incorrect inputField for off-target dynamic roll damping.
	- Fix RippleIndex Errors from weapons overheating/reloading.
	- Fix AI ignoring max missiles per target setting for GPS missiles
	- Spaceborne pilotAIs will now dodge via RCS translation.
	- Craft with guard mode enabled now automatically receive radar contacts via the datalink from friendlies if they have an onboard radar that can receive radar data (canReceiveRadarData = true in part).
	- Corrections to aiming at orbital speeds and long distances (for deep space combat).
		- Caveats:
			- There is a discontinuity in the way KSP handles floating origin/Krakensbane adjustments at 100km above each world that can adversely affect trans-100km orbit aiming slightly (high bullet speeds mostly negates this).
			- KSP won't load surface vessels when the current vessel is over ~90km (on Kerbin) for some unknown reason despite a sufficient PRE range, so orbital bombardment only works from LKO.
			- The targeting reticle currently isn't being correctly placed when manually aiming at closeby targets (will be fixed later).
- Detectors:
	- Fix IRST preventing Radar GUI close.